Refactor guided by sonar warnings